# ddd

.github/: copilot-instructions.md
.github/agents/: 00_orchestrator.md
distiller/: di-prototype-requirement.md  domain-model.drawio  pyproject.toml  requirement.md
distiller/di_prototype/: README.md  main.py  requirements.txt  sample.html
distiller/di_prototype/application/: html_parser.py
distiller/di_prototype/di/: dev_module.py  prod_module.py
distiller/di_prototype/domain/: i_data_exporter.py  i_logger.py  model.py
distiller/di_prototype/infrastructure/: dev_data_exporter.py  dev_logger.py  null_data_exporter.py  null_logger.py
docs/: chat.history.md
